# switchman

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sheme.puml  start.sh  start_doc_com.sh  stop_bot.sh
.github/workflows/: auto_deploy.yml  expemental.yml
src/: config.py  main.py
src/core/: bot.py  config.py  log_config.py
src/custom_handlers/: callback.py  message.py
src/custom_handlers/group/: callback.py  message.py
src/custom_handlers/private/: callback.py  message.py
src/filters/: calendar.py  call.py  chat_type.py  filters.py  simpl.py
src/head_states/: calendar.py
src/keyboard/: inline.py
src/middleware/: lang_middleware.py  logging_middleware.py
src/static/: dictionary.py
src/utils/: calendar_worker.py  requests_pack.py
