
[tool.poetry]
name = "switchman"
version = "0.1.0"
packages = [
    {include = "*", from = "src"}  # Все файлы из src/ как пакет
]
[tool.poetry.dependencies]
python = ">=3.12,<4.0"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.9.0"
attrs = "24.2.0"
build = "1.2.2.post1"
cachecontrol = "0.14.3"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
crashtest = "0.4.1"
cryptography = "45.0.2"
distlib = "0.3.9"
dulwich = "0.22.8"
environs = "11.2.1"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
findpython = "0.6.3"
frozenlist = "1.5.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jeepney = "0.9.0"
keyring = "25.6.0"
marshmallow = "3.23.1"
more-itertools = "10.7.0"
msgpack = "1.1.0"
multidict = "6.1.0"
packaging = "24.2"
pbs-installer = "2025.5.17"
pkginfo = "1.12.1.2"
platformdirs = "4.3.8"
propcache = "0.2.1"
pycparser = "2.22"
pydantic = "2.10.3"
pydantic-settings = "2.7.0"
pydantic-core = "2.27.1"
pyproject-hooks = "1.2.0"
python-dotenv = "1.0.1"
rapidfuzz = "3.13.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
secretstorage = "3.3.3"
shellingham = "1.5.4"
sniffio = "1.3.1"
tomlkit = "0.13.2"
trove-classifiers = "2025.5.9.12"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
virtualenv = "20.31.2"
yarl = "1.18.3"
zstandard = "0.23.0"
aiohttp = "^3.11.18"
aiohappyeyeballs = "^2.6.1"
pytelegrambotapi = "^4.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"  # Убедитесь, что Ruff есть здесь

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
exclude = [
    "**/__pycache__",
    "**/.git",
    "**/.mypy_cache",
    "**/.pytest_cache"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"